--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body { 
-	margin: 10px 100px; 
+    
+	 
 	padding: 0; 
 	font-family: Bahnschrift; 
 	text-align:justify;
@@ -31,10 +32,14 @@ img{
 }
 
 /*Size/position of map*/
-#map{ 
-	height: 500px; 
-	margin-top: 10px;
-	z-index: 1;
+#map{
+    position: absolute;
+    top:0;
+    bottom:0;
+    width: 100%; 
+	
+	
+	
 }
 
 /*Position button*/
